--- a/src/index.html
+++ b/src/index.html
@@ -250,7 +250,6 @@
         <h2 class="title title_fz16 resume__title">Опыт</h2>
         <div class="title title_fz36 resume__subtitle">Чем я буду полезна</div>
         <div class="divider"></div>
-
         <div class="resume__wrapper">
           <div class="resume__column">
             <h3 class="title title_fz20 resume__column-title">
@@ -275,7 +274,6 @@
                   </div>
                 </div>
               </li>
-
               <li>
                 <div class="resume__item">
                   <div class="resume__item-head">
@@ -296,7 +294,6 @@
               </li>
             </ul>
           </div>
-
           <div class="resume__column">
             <h3 class="title title_fz20 resume__column-title">
               Опыт работы
@@ -342,6 +339,135 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="skills">
+      <div class="container">
+        <h2 class="title title_fz16 skills__title">Навыки</h2>
+        <div class="title title_fz136 skills__subtitle">Что я использую в работе</div>
+        <div class="divider"></div>
+        <div class="skills__wrapper">
+          <div class="skills__item">
+            <img src="./icons/skills/html5.svg" alt="html" class="skills__item-img">
+            <div class="skills__item-title">HTML5</div>
+            <div class="skills__item-text">Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта</div>
+          </div>
+          <div class="skills__item">
+            <img src="./icons/skills/css3.svg" alt="css" class="skills__item-img">
+            <div class="skills__item-title">CSS3</div>
+            <div class="skills__item-text">Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!</div>
+          </div>
+          <div class="skills__item">
+            <img src="./icons/skills/js.svg" alt="js" class="skills__item-img">
+            <div class="skills__item-title">JavaScript</div>
+            <div class="skills__item-text">Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое</div>
+          </div>
+          <div class="skills__item">
+            <img src="./icons/skills/jquery.svg" alt="jquery" class="skills__item-img">
+            <div class="skills__item-title">Jquery</div>
+            <div class="skills__item-text">Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект мы её не будем, но навык работы с ней присутствует</div>
+          </div>
+          <div class="skills__item">
+            <img src="./icons/skills/react.svg" alt="js" class="skills__item-img">
+            <div class="skills__item-title">React</div>
+            <div class="skills__item-text">Эта библиотека позволяет создавать web-приложения. Мы можем создать максимально интерактивный продукт именно под ваши цели</div>
+          </div>
+          <div class="skills__item">
+            <img src="./icons/skills/node.js.svg" alt="nodejs" class="skills__item-img">
+            <div class="skills__item-title">Node.js</div>
+            <div class="skills__item-text">Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут выполнять действия, которые пользователь не видит</div>
+          </div>
+          <div class="skills__item">
+            <img src="./icons/skills/mongo.db.svg" alt="mongodb" class="skills__item-img">
+            <div class="skills__item-title">Mongo.db</div>
+            <div class="skills__item-text">Это нереляционная база данных, которая будет хранить данные вашего сайта или приложения</div>
+          </div>
+        </div>
+      </div>
+<div class="container">
+  <div class="skills__progress">
+
+    <div class="skills__block">
+
+      <div class="skills__progress-wrapper">
+        <div class="title title_fz14 skills__progress-subtitle">Создание сайтов</div>
+        <div class="skills__progress-percents">100%</div>
+
+      </div>
+   
+     <div class="skills__progress-bar-default">
+       <div style="width:100%; border-radius: 4px;" class="skills__progress-bar-orange"></div>
+     </div>
+     </div>
+
+     <div class="skills__block">
+
+      <div class="skills__progress-wrapper">
+        <div class="title title_fz14 skills__progress-subtitle">Создание приложений</div>
+        <div class="skills__progress-percents">85%</div>
+
+      </div>
+   
+     <div class="skills__progress-bar-default">
+       <div style="width:85%; border-radius: 4px;" class="skills__progress-bar-orange"></div>
+     </div>
+     </div>
+
+     <div class="skills__block">
+
+      <div class="skills__progress-wrapper">
+        <div class="title title_fz14 skills__progress-subtitle">Работа с данными</div>
+        <div class="skills__progress-percents">90%</div>
+
+      </div>
+   
+     <div class="skills__progress-bar-default">
+       <div style="width:90%; border-radius: 4px;" class="skills__progress-bar-orange"></div>
+     </div>
+     </div>
+
+     <div class="skills__block">
+
+      <div class="skills__progress-wrapper">
+        <div class="title title_fz14 skills__progress-subtitle">Креативность</div>
+        <div class="skills__progress-percents">75%</div>
+
+      </div>
+   
+     <div class="skills__progress-bar-default">
+       <div style="width:75%; border-radius: 4px;" class="skills__progress-bar-orange"></div>
+     </div>
+     </div>
+
+     <div class="skills__block">
+
+      <div class="skills__progress-wrapper">
+        <div class="title title_fz14 skills__progress-subtitle">Создание дизайна</div>
+        <div class="skills__progress-percents">90%</div>
+
+      </div>
+   
+     <div class="skills__progress-bar-default">
+       <div style="width:90%; border-radius: 4px;" class="skills__progress-bar-orange"></div>
+     </div>
+     </div>
+
+     <div class="skills__block">
+
+      <div class="skills__progress-wrapper">
+        <div class="title title_fz14 skills__progress-subtitle">Soft skills</div>
+        <div class="skills__progress-percents">95%</div>
+
+      </div>
+   
+     <div class="skills__progress-bar-default">
+       <div style="width:95%; border-radius: 4px;" class="skills__progress-bar-orange"></div>
+     </div>
+     </div>
+     
+   </div>
+
+</div>
+      
     </section>
     <script src="js/script.js"></script>
   </body>
