--- a/src/index.html
+++ b/src/index.html
@@ -383,91 +383,91 @@
           </div>
         </div>
       </div>
-<div class="container">
-  <div class="skills__progress">
-
-    <div class="skills__block">
-
-      <div class="skills__progress-wrapper">
-        <div class="title title_fz14 skills__progress-subtitle">Создание сайтов</div>
-        <div class="skills__progress-percents">100%</div>
-
+      <div class="container">
+        <div class="skills__progress">
+          <div class="skills__block">
+            <div class="skills__progress-wrapper">
+              <div class="title title_fz14 skills__progress-subtitle">Создание сайтов</div>
+              <div class="skills__progress-percents">100%</div>
+            </div>
+            <div class="skills__progress-bar-default">
+              <div class="skills__progress-bar-orange"></div>
+            </div>
+          </div>
+          <div class="skills__block">
+            <div class="skills__progress-wrapper">
+              <div class="title title_fz14 skills__progress-subtitle">Создание приложений</div>
+              <div class="skills__progress-percents">85%</div>
+            </div>
+            <div class="skills__progress-bar-default">
+              <div class="skills__progress-bar-orange"></div>
+            </div>
+          </div>
+          <div class="skills__block">
+            <div class="skills__progress-wrapper">
+              <div class="title title_fz14 skills__progress-subtitle">Работа с данными</div>
+              <div class="skills__progress-percents">90%</div>
+            </div>
+            <div class="skills__progress-bar-default">
+              <div class="skills__progress-bar-orange"></div>
+            </div>
+          </div>
+          <div class="skills__block">
+            <div class="skills__progress-wrapper">
+              <div class="title title_fz14 skills__progress-subtitle">Креативность</div>
+              <div class="skills__progress-percents">75%</div>
+            </div>
+            <div class="skills__progress-bar-default">
+              <div class="skills__progress-bar-orange"></div>
+            </div>
+          </div>
+          <div class="skills__block">
+            <div class="skills__progress-wrapper">
+              <div class="title title_fz14 skills__progress-subtitle">Создание дизайна</div>
+              <div class="skills__progress-percents">90%</div>
+            </div>
+            <div class="skills__progress-bar-default">
+              <div class="skills__progress-bar-orange"></div>
+            </div>
+          </div>
+          <div class="skills__block">
+            <div class="skills__progress-wrapper">
+              <div class="title title_fz14 skills__progress-subtitle">Soft skills</div>
+              <div class="skills__progress-percents">95%</div>
+            </div>
+            <div class="skills__progress-bar-default">
+              <div class="skills__progress-bar-orange"></div>
+            </div>
+          </div>
+        </div>
       </div>
-   
-     <div class="skills__progress-bar-default">
-       <div style="width:100%; border-radius: 4px;" class="skills__progress-bar-orange"></div>
-     </div>
-     </div>
-
-     <div class="skills__block">
-
-      <div class="skills__progress-wrapper">
-        <div class="title title_fz14 skills__progress-subtitle">Создание приложений</div>
-        <div class="skills__progress-percents">85%</div>
-
+    </section>
+    <section class="portfolio">
+      <div class="container">
+        <h2 class="title title_fz16 portfolio__title">Портфолио</h2>
+        <div class="title title_fz36 portfolio__subtitle">Мои работы</div>
+        <div class="divider"></div>
+        <div class="portfolio__wrapper">
+          <a href="#" class="portfolio__item">
+            <img src="./img/works/uber.jpg" alt="uber">
+          </a>
+          <a href="#" class="portfolio__item">
+            <img src="./img/works/pulse.jpg" alt="pulse">
+          </a>
+          <a href="#" class="portfolio__item">
+            <img src="./img/works/bread.jpg" alt="bread">
+          </a>
+          <a href="#" class="portfolio__item vertical">
+            <img src="./img/works/plans.jpg" alt="plans">
+          </a>
+          <a href="#" class="portfolio__item">
+            <img src="./img/works/ipad.jpg" alt="ipad">
+          </a>
+          <a href="#" class="portfolio__item horizontal">
+            <img src="./img/works/mac.jpeg" alt="mac">
+          </a>
+        </div>
       </div>
-   
-     <div class="skills__progress-bar-default">
-       <div style="width:85%; border-radius: 4px;" class="skills__progress-bar-orange"></div>
-     </div>
-     </div>
-
-     <div class="skills__block">
-
-      <div class="skills__progress-wrapper">
-        <div class="title title_fz14 skills__progress-subtitle">Работа с данными</div>
-        <div class="skills__progress-percents">90%</div>
-
-      </div>
-   
-     <div class="skills__progress-bar-default">
-       <div style="width:90%; border-radius: 4px;" class="skills__progress-bar-orange"></div>
-     </div>
-     </div>
-
-     <div class="skills__block">
-
-      <div class="skills__progress-wrapper">
-        <div class="title title_fz14 skills__progress-subtitle">Креативность</div>
-        <div class="skills__progress-percents">75%</div>
-
-      </div>
-   
-     <div class="skills__progress-bar-default">
-       <div style="width:75%; border-radius: 4px;" class="skills__progress-bar-orange"></div>
-     </div>
-     </div>
-
-     <div class="skills__block">
-
-      <div class="skills__progress-wrapper">
-        <div class="title title_fz14 skills__progress-subtitle">Создание дизайна</div>
-        <div class="skills__progress-percents">90%</div>
-
-      </div>
-   
-     <div class="skills__progress-bar-default">
-       <div style="width:90%; border-radius: 4px;" class="skills__progress-bar-orange"></div>
-     </div>
-     </div>
-
-     <div class="skills__block">
-
-      <div class="skills__progress-wrapper">
-        <div class="title title_fz14 skills__progress-subtitle">Soft skills</div>
-        <div class="skills__progress-percents">95%</div>
-
-      </div>
-   
-     <div class="skills__progress-bar-default">
-       <div style="width:95%; border-radius: 4px;" class="skills__progress-bar-orange"></div>
-     </div>
-     </div>
-     
-   </div>
-
-</div>
-      
     </section>
     <script src="js/script.js"></script>
   </body>
